--- a/2018.0328/BasicTable.html
+++ b/2018.0328/BasicTable.html
@@ -1,7 +1,6 @@
-<!doctype html> <!-- basicList.html-->
-<html>
-<head>
- <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<!doctype html> <!-- basicTable1.html-->
+<html long="ko">
+<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
  <style> table,tr,th,td{
   border: 1px solid black;  border-collapse;
 }
