--- a/2018.0328/BasicTable.html
+++ b/2018.0328/BasicTable.html
@@ -2,9 +2,9 @@
 <html long="ko">
 <head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
  <style> table,tr,th,td{
-  border: 1px solid black;  border-collapse;
+  border: 1px solid black;  border-collapse:collapse;
 }
-</style> <!-- border-collapase 단선으로, 반대는 separate -->
+</style> <!-- border-collapase:collapse; 단선으로, 반대는 separate -->
 <title>HTML5테이블 테스트 실습</title>
 </head>
 <body>
