--- a/2018.0328/timetable.html
+++ b/2018.0328/timetable.html
@@ -1,10 +1,10 @@
-<!doctype html> <!-- basicTable1.html-->
+<!doctype html> <!-- tableSpan.html-->
 <html long="ko">
 <head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
  <style> table,tr,th,td{
   border: 1px solid black;  border-collapse:collapse;
 }
-</style> <!-- border-collapase:collapse; 단선으로, 반대는 separate -->
+</style> <!-- border-collapase:collapse 단선으로, 반대는 separate -->
 <title>HTML5테이블 테스트 실습</title>
 </head>
 <body>
