--- a/2018.0328/tableHw.html
+++ b/2018.0328/tableHw.html
@@ -1,4 +1,4 @@
-<!doctype html> <!-- tableSpan.html-->
+<!doctype html> <!-- tableHw.html-->
 <html long="ko">
 <head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
  <title>HTML5테이블 테스트 실습</title>
