--- a/2018.0328/timetable.html
+++ b/2018.0328/timetable.html
@@ -25,19 +25,19 @@
   <td>4</td>                                                                                 <td rowspan="2"> 인터넷 프로그래밍</td>                                               <td rowspan="3">사회학개론</td>
   </tr>   
   <tr>
-  <td>5</td>     <td></td>                                <td>디지털 논리회로</td>                                                                         <td></td>                     <td></td>
+  <td>5</td>     <td></td>                                <td>디지털 논리회로</td>                                                                         <td></td>                    
   </tr>
   <tr>
-  <td>6</td>    <td rowspan="4">c++프로그래밍</td>      <td></td>                                            <td></td>                                  <td></td>                        <td></td>
+  <td>6</td>    <td rowspan="4">c++프로그래밍</td>      <td></td>                                            <td></td>                                  <td></td>                       
   </tr>
   <tr>
-  <td>7</td>                                           <td></td>                                            <td></td>                     <td rowspan="2">캠퍼스멘토링</td>                 <td></td>
+  <td>7</td>                                           <td></td>                                            <td></td>                     <td rowspan="2">캠퍼스멘토링</td>                 
   </tr>
   <tr>
-  <td>8</td>                                           <td></td>                                               <td></td>                        <td></td>                            <td></td>
-  </tr>
+  <td>8</td>                                           <td></td>                                               <td></td>                                                                  <td></td>
+  </tr>        
   <tr>
-  <td>9</td>                                             <td></td>                                              <td></td>                                <td></td>                     <td></td>
+  <td>9</td>                                             <td></td>                                              <td></td>                                <td></td>                         <td></td>
   </tr>
  </table>
 </body></html>
