--- a/2018.0328/timetable.html
+++ b/2018.0328/timetable.html
@@ -10,19 +10,19 @@
 <body>
   <table>
   <tr>
-   <th> </th>           <th>월</th>                            <th>화</th>                                <th>수</th>                                   <th>목</th>                   <th>금</th>
+   <th> </th>           <th>월</th>                            <th>화</th>                                <th>수</th>                                   <th>목</th>                              <th>금</th>
   </tr>
   <tr>
-   <td>1</td>      <td></td>                                <td></td>                          <td rowspan="2">자료구조및실습</td>          <td rowspan="2">영어회화1</td>             <td></td>
+   <td>1</td>      <td></td>                                <td></td>                          <td rowspan="2">자료구조및실습</td>          <td rowspan="2">영어회화1</td>                       <td></td>
   </tr>
   <tr>
-   <td>2</td>     <td></td>                               <td></td>                                     
+   <td>2</td>     <td></td>                               <td></td>                                                                                                                                <td></td>             
   </tr>
   <tr>
-   <td>3</td>    <td rowspan="2"> 디지털 논리회로</td>   <td rowspan="2">자료구조및실습</td>              <td></td>                     <td rowspan="2">인터넷 프로그래밍</td>         <td></td>
+   <td>3</td>    <td rowspan="2"> 디지털 논리회로</td>   <td rowspan="2">자료구조및실습</td>              <td></td>                    <td></td> <td rowspan="2">인터넷 프로그래밍</td>         <td></td>
   </tr>
   <tr>
-  <td>4</td>                                                                                 <td rowspan="2"> 인터넷 프로그래밍</td>                                               <td rowspan="3">사회학개론</td>
+  <td>4</td>                                                                                 <td rowspan="2"> 인터넷 프로그래밍</td>                                                            <td rowspan="3">사회학개론</td>
   </tr>   
   <tr>
   <td>5</td>     <td></td>                                <td>디지털 논리회로</td>                                                                         <td></td>                    
@@ -34,10 +34,10 @@
   <td>7</td>                                           <td></td>                                            <td></td>                     <td rowspan="2">캠퍼스멘토링</td>                 
   </tr>
   <tr>
-  <td>8</td>                                           <td></td>                                               <td></td>                                                                  <td></td>
+  <td>8</td>                                           <td></td>                                               <td></td>                                                                            <td></td>
   </tr>        
   <tr>
-  <td>9</td>                                             <td></td>                                              <td></td>                                <td></td>                         <td></td>
-  </tr>
+  <td>9</td>                                             <td></td>                                              <td></td>                                <td></td>                              <td></td>
+  </tr>             
  </table>
 </body></html>
