--- a/20180329/basicSemantic.html
+++ b/20180329/basicSemantic.html
@@ -1,13 +1,8 @@
-<!doctype html> <!-- advDiv.html-->
+<!doctype html> <!-- basicSemantic.html-->
 <html>
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<style>
- div#division1{border:solid 1px blue;color:bleu; height:100px; width:600px;float:left;}
- div#division2{border:solid 1px red;color:bleu; height:100px; width:300px;float:left;}
- div#division3{border:solid 1px blue;color:bleu; height:100px; width:300px;clear:both;}
-</style
  <title>시멘틱 학습</title>
  </head>
  <body>
