--- a/20180329/basicSemantic.html
+++ b/20180329/basicSemantic.html
@@ -3,6 +3,16 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
+<style>
+ header,nav,section,article,aside,footer
+{border:1px solid gray; margin:5px;padding:8px;width:1000px}
+section{width:750px; float:left;}
+aside{wide:221px;float:left;}
+footer{height:50px;clear:both;}
+nav ul{margin:0;paddimg:0;}
+nav ul li{displays:inline;margin:5px;}
+aside ul{margin:0;paddimg:0;}
+aside ul li{displays:block;margin:5px;}
  <title>시멘틱 학습</title>
  </head>
  <body>
