--- a/20180404/anchor1.html
+++ b/20180404/anchor1.html
@@ -8,7 +8,7 @@
   <p>다음</p>
   <a href="http://www.google.com"target="_blank">구글이동(새윈도우)</a><br/>
   <a href="anchor2.html">사이트내문서이동</a><br/>
-  <a=href="#chapter3">제3장문내이동(북마크이동)</a><br/>
+  <a=href="#chapter3">제3장문서내이동(북마크이동)</a><br/>
  <h3 id=""chapter2"> 제2장</h3>
   <p>제2장입니다.제2장은 무엇을 정의합니다.</p>
   <p>HTML과 같은 하이퍼미디어에서,노드는 HTML문서, 멀티미디어 정보를 표현하는 기본단위이고,링크는 노드간을 연결하며,앵커는 링크의 출발점 또는 도착점을 의미합니다.</p>
@@ -23,6 +23,6 @@
   <tr><th>이동주소</th><th>사이트명</th><th>설명</th></tr>
   <tr><th>구글</tr><td><a href="http://www.naver.com">네이버</a></td><td>네이버</td></tr>
   <tr><th>사이트 다른문서</td><td><a href="anchor2.html">anchor2.html로 이동</a></td><td>anchor2</td></tr>
-  <tr><th>제1장</td><td><a=href="#chapter1">제1장이동(북마크이동)</a></td><td>제1장</td></tr>
+  <tr><th>제1장</td><td><a href="#chapter1">제1장이동(북마크이동)</a></td><td>제1장</td></tr>
 </title>
 </body></html>
