--- a/20180404/basicImage.html
+++ b/20180404/basicImage.html
@@ -7,15 +7,15 @@
  <figure>
   <h3>SNS사이트</h3>
   <a href=http://google.com>
-  <img scr="../images/googlePlus.png"alt="구글"/><br/>
+  <img scr="../googlePlus.png"alt="구글"/><br/>
   <figcaption>(그림)구글 링크</figcaption>
   </a>
   <a hfer=http://www.facebook.com>
-  <img scr="../images/facebookOne.png"alt="페이스북"/><br/>
+  <img scr="../facebookOne.png"alt="페이스북"/><br/>
   <figcaption>(그림)페이스북 링크</figcaption>
   </a>
   <a href=http://www.twitter.com>
-  <img scr="../images/twitterYou.png"alt="트위터"/><br/>
+  <img scr="../twitterYou.png"alt="트위터"/><br/>
   <figcaption>(그림)트위터 링크</figcaption>
   </a>
  </figure>
