--- a/20180412/formRadio1.html
+++ b/20180412/formRadio1.html
@@ -3,7 +3,7 @@
 <title>폼학습</title></head>
 <body>
  <section>
-<form action="http://hive.dju.ac.kr/~drkdhong/html5/formRadio1.jsp"method="past">
+<form action="http://hive.dju.ac.kr/~drkdhong/html5/formRadio1.jsp"method="post">
 <fieldset>
 <legend>성별 선택</legend>
 	<label for="malex">남자</label>
