--- a/20180412/basicSemantic.html
+++ b/20180412/basicSemantic.html
@@ -11,7 +11,7 @@
  aside ul {margin:0;padding:0;}
  aside ul li {display:black;margin:5px;}
 </style>
-<title>시멘틱 학습</title></head>
+<title>기본 모델 학습</title></head>
 <body>
  <header>
  <h2>실습을 환영합니다</h2></header>
