--- a/homework/DeJonUniversity.html
+++ b/homework/DeJonUniversity.html
@@ -1,4 +1,4 @@
-<!doctype html> <!-- DeJonUniversity
+<!doctype html> <!-- DeJonUniversity>
 <html><head><meta charset="utf-8"/>
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
 <title>대전대학교 건물별 이미지 링크</title>
