--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
   <script>fnTest();</script>
  </section>
  <footer>
-  <p>&copy; 20XX Made by Korea. All rights reserved.</p></footer>
+  <p>&copy; 2018 Made by Korea. All rights reserved.</p></footer>
  </body>
  </html>
