--- a/homework/reservation.html
+++ b/homework/reservation.html
@@ -1,4 +1,4 @@
-<!doctype html> <!-- reservaction.html-->
+<!doctype html> <!-- reservation.html-->
 <html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>음식점 예약 화면</title>
 </head>
