--- a/index.html
+++ b/index.html
@@ -1,39 +1,80 @@
-<!doctype html> <!--  index.html  -->
-<html>
+<!DOCTYPEhtml> <!-- index.html-->
+<html lang="ko">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<style>
- body {font-family: Verdana, sans-serif;font-size:0.8em;}
- header, nav, section, article, footer
- {border:1px solid gray; margin:5px; padding:8px;}
- section#displayArea{height:210px;}
- nav ul {margin:0; padding:0;}
- nav ul li {display:inline; margin:5px;}
- a {text-decoration:none;}
- #id_form {width:100px; height:14px; color:red;}
-</style>
-<script type="text/javascript">
- function fnTest(){
- document.write("자바스크립트환영!")
- alert("자바 스크립트환영!!");
- }
-</script>
-<title>자바 스크립트 실습</title>
-</head>
+  <meta charset="utf-8"/>
+  <meta name="viewport"content="width=device-width, initial-scale=1"/>
+  <link rel="stylesheet" href="../css/sample.css"/>
+  <meta name="description" content="HTML5test페이지"/>
+  <meta name="keywords" content="IoT,smart"/>
+  <title>INDEX</title></head>
 <body>
- <header>
-  <h2>자바스크립트를 환영합니다</h2></header>
-<nav>
- <ul>
-  <li><a href="http://www.dju.ac.kr">대학</a></li>
-  <li><a href="http://hive.dju.ac.kr">실습서버</a></li>
- </ul></nav>
-<section>
- <h2>자바 스크립트 실행합니다</h2>
-  <script>fnTest();</script>
- </section>
- <footer>
-  <p>&copy; 2018 Made by Korea. All rights reserved.</p></footer>
- </body>
- </html>
+  <h1 id="aList"><i>Index</i>-<font color="green" size="3">Internet Programming</font></h1>
+  <hr/>
+  <ul>
+    <li style="list-style-type:square"><mark>Assignment</mark></li>
+        <li>homework</li>
+        <ul>
+          <li><a href="roseunghyeon.github.io/homework/timetable">timetable</a></li>
+          <li><a href="https://roseunghyeon.github.io/homework/DeJonUniversity.html">DeJonUniversity.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/homework/reservation.html</a>reservation.html</li>
+          <li><a href="https://roseunghyeon.github.io/homework/30th.html">30th.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/homework/convergence.html">convergence.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/homework/hewa.html">hewa.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/homework/jisan.html">jisan.html</a></li>
+          </ul>
+        <li>20180418</li>
+        <ul>
+          <li><a href="https://roseunghyeon.github.io/20180418/formTextarea">formTextarea</a></li>
+          </ul>
+        <li>20180412</li>
+        <ul>
+          <li><a href="https://roseunghyeon.github.io/20180412/basicAudio.html">basicAudio.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180412/basicModel.html">basicModel.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180412/basicSemantic.html">basicSemantic.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180412/formEmailAuto1.html">formEmailAuto1.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180412/formFormaction1.html">formFormaction1.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180412/formRadio1.html">formRadio1.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180412/formSelect1.html">formSelect1.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180412/fornCheckbox1.html">fornCheckbox1.htm</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180412/fornRadio1.jsp">fornRadio1.jsp</a></li>
+          </ul>
+        <li>20180404</li>
+        <ul>
+          <li><a href="https://roseunghyeon.github.io/20180404/anchor1.htmll">anchor1.htmll</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180404/basicImage.html">basicImage.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180404/facebookOne.png">facebookOne.png</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180404/korea.gifl">korea.gifl</a></li>
+          <li><a href="roseunghyeon.github.io/20180404/scene.pngl">scene.png</a></li>
+          <li><a href="roseunghyeon.github.io/20180404/twitterYou.png">twitterYou.png</a></li>
+          </ul>
+           <li>20180329</li>
+        <ul>
+          <li><a href="roseunghyeon.github.io/20180329/advDiv.htmll">advDiv.htmll</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180329/basicPDivSpan.html">basicPDivSpan.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180329/basicSemantic.html">basicSemantic.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/20180329/tag_video.htmll">tag_video.html</a></li>
+          </ul>
+           <li>20180322</li>
+        <ul>
+          <li><a href="roseunghyeon.github.io/20180322/basicList.htmll">basicList.html</a></li>
+          <li><a href="roseunghyeon.github.io/20180322/korean">koreanl</a></li>
+          </ul>
+           <li>20180318</li>
+        <ul>
+<li><a href="https://roseunghyeon.github.io/20180318/BasicTable.html">BasicTable.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/2018.0328/tableHw.htmll">tableHw.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/2018.0328/timetable.html">timetable.html</a></li>
+          <li><a href="roseunghyeon.github.io/20180308/index.html">index.html</a></li>
+          </ul>
+          <li>20180308</li>
+        <ul>
+          <li><a href="https://roseunghyeon.github.io/20180318/BasicTable.html">BasicTable.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/2018.0328/tableHw.html">tableHw.html</a></li>
+          <li><a href="https://roseunghyeon.github.io/2018.0328/timetable.html">timetable.html</a></li>
+        </ul>
+      </ul>
+    </ul>
+<hr/>
+</body>
+</html>
+
