--- a/20180510/cssFont.html
+++ b/20180510/cssFont.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8"/><meta name="viewport"content="width=device-width,initial-scale=1"/>
 <style>
   .fontFamilyA{font-family:"Time New Roman",Garamond,self; }
-  .fontFamilyB{font-family:Helvetica."MS verdana",sans-serif; ;}
+  .fontFamilyB{font-family:Helvetica."MS verdana",sans-serif; }
   .fontSizeA{ font-size:100%; } .fontSizeB{ font-size:200%; }
-  .fontSizeA{font-family:normal} .fontStyleB{font-size:italic; } .fontStyleC{font-style:oblique;}
+  .fontSizeA{ font-family:normal; } .fontStyleB{ font-size:italic; } .fontStyleC{ font-style:oblique;}
   .fontWeightA{ font-weight:100;} .fontWeightB{ font-weight:400;}.fontWeightC{ font-weight:600;}
   .fontWeightD{ font-weight:800;}
 </style>
