--- a/20180510/cssFont.html
+++ b/20180510/cssFont.html
@@ -6,9 +6,9 @@
   .fontFamilyA{font-family:"Time New Roman",Garamond,self; }
   .fontFamilyB{font-family:Helvetica."MS verdana",sans-serif; }
   .fontSizeA{ font-size:100%; } .fontSizeB{ font-size:200%; }
-  .fontSizeA{ font-family:normal; } .fontStyleB{ font-size:italic; } .fontStyleC{ font-style:oblique;}
-  .fontWeightA{ font-weight:100;} .fontWeightB{ font-weight:400;}.fontWeightC{ font-weight:600;}
-  .fontWeightD{ font-weight:800;}
+  .fontStyleA{ font-style:normal; } .fontStyleB{ font-style:italic; } .fontStyleC{ font-style:oblique; }
+  .fontWeightA{ font-weight:100; } .fontWeightB{ font-weight:400; }.fontWeightC{ font-weight:600; }
+  .fontWeightD{ font-weight:800; }
 </style>
 <title>CSS 글자체 실습 </title></head>
 <body><section class="fontFamilyA"><h3>애국가</h3>
