--- a/20180510/cssBorder1.html
+++ b/20180510/cssBorder1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/><meta name="viewport"content="width=device-width,initial-scale=1"/>
 <style>
- .pbsolid{ border: 5px solid; background:beige;}.pbdashed{ border: 5px double; background:beige;}
+ .pbsolid{ border:5px solid; background:beige;} .pbdashed{ border: 5px dashed; background:beige;}
  .pbdotted{ border: 5px dotted; background:beige;}.pbdouble{ border: 5px double; background:beige;}.pbhidden{ border: 5px pbhidden; background:beige;}.pbnone{ border: 5px none; background:beige;}
 .pbinset{ border: 5px inset; background:beige;}.pboutset{ border: 5px outset; background:beige;}
 .pbridge{ border: 5px ridge; background:beige;}.pbgroove{ border: 5px groove; background:beige;}
