--- a/20180516/cssDisp1.html
+++ b/20180516/cssDisp1.html
@@ -5,7 +5,7 @@
 <style>
   .ordinary { border:1px solid black; }
   .dispinline{ display:inline; border:1px solid black; }
-  .displock{ display:block; border:1px solid black; }
+  .dispblock{ display:block; border:1px solid black; }
   .dispinlineblock{ display:inline-block; border:1px solid black; width:150px; height:50;}
 </style>
 <title>CSS display/visibility 실습 </title></head>
