--- a/20180516/cssDisp1.html
+++ b/20180516/cssDisp1.html
@@ -6,7 +6,7 @@
   .ordinary { border:1px solid black; }
   .dispinline{ display:inline; border:1px solid black; }
   .dispblock{ display:block; border:1px solid black; }
-  .dispinlineblock{ display:inline-block; border:1px solid black; width:150px; height:50;}
+  .dispinlineblock{ display:inline-block; border:1px solid black; width:150px; height:50px;}
 </style>
 <title>CSS display/visibility 실습 </title></head>
 <body><section>
