--- a/20180517/cssOverflow1.html
+++ b/20180517/cssOverflow1.html
@@ -1,9 +1,9 @@
-<div class="over1 bk1 bdcol<!doctype html> <!--  cssOverflow1.html-->
+<!doctype html> <!--  cssOverflow1.html-->
 <html>
 <head>
 <meta charset="utf-8"/><meta name="viewport"content="width=device-width,initial-scale=1"/>
-<style>*{margin:0;padding:0;}p{ext-align:justify;}.bdcolor {border:1px solid lue;}/*보더추가*/
-  .over { overflow:visible;}.over2{ overflow:hidden;}.over3{ overflow:scroll;}.over4{ overflow:atou;}
+<style>*{margin:0;padding:0;} p{ext-align:justify;} .bdcolor {border:1px solid lue;}/*보더추가*/
+  .over1 { overflow:visible;}.over2{ overflow:hidden;}.over3{ overflow:scroll;}.over4{ overflow:atou;}
   .overx1{ overflow-x:hidden;}.overy1{ overflow-y:scroll;}
   .bk1 {height:50px;width:24%;background-color:beige;} .float {float;left}.clear1{clear:both;}
 </style>
@@ -23,4 +23,3 @@
 </div>
 </section>
 </body></html>
-or float1">(visible)동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한 사람 대한으로 길이 보전하세</div> 
