--- a/20180517/cssOverflow1.html
+++ b/20180517/cssOverflow1.html
@@ -5,7 +5,7 @@
 <style>*{margin:0; padding:0;} p{text-align:justify;} .bdcolor {border:1px solid blue;}/*보더추가*/
   .over1 { overflow:visible;}.over2{ overflow:hidden;}.over3{ overflow:scroll;}.over4{ overflow:auto;}
   .overx1{ overflow-x:hidden;}.overy1{ overflow-y:scroll;}
-  .bk1 {height:50px;width:24%;background-color:beige;} .float {float;left}.clear1{clear:both;}
+  .bk1 {height:50px;width:24%;background-color:beige;} .float1 {float;left}.clear1{clear:both;}
 </style>
 <title>CSS overflow 실습 </title></head>
 <body><section>
@@ -19,7 +19,7 @@
 </div><br class="clear1"/><br/><br/>
 <p>다음 예제는 overflow-x와 overflow-y에 대한 처리 방법을 설명하고 있다.<p>
 <div>
-<div class="over1 bk1 bdcolor float1">(x-hidden,y-scroll)동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한 사람 대한으로 길이 보전하세</div>
+<div class="overx1 overy1 bk1 bdcolor float1">(x-hidden,y-scroll)동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한 사람 대한으로 길이 보전하세</div>
 </div>
 </section>
 </body></html>
