--- a/20180517/cssOverflowImage1.html
+++ b/20180517/cssOverflowImage1.html
@@ -1,14 +1,10 @@
 <!doctype html> <!--  cssOverflowImage1.html-->
-<html>
-<head>
-<meta charset="utf-8"/><meta name="viewport"content="width=device-width,initial-scale=1"/>
+<html><head><meta charset="utf-8"/><meta name="viewport"content="width=device-width,initial-scale=1"/>
 <style>*{margin:0; padding:0;} p{text-align:justify;} .bdcolor {border:1px solid blue;}/*보더추가*/
-  .over1 { overflow:visible;}.over2{ overflow:hidden;}.over3{ overflow:scroll;}.over4{ overflow:auto;}
   .imageOver::after{content:"";clear:both;display:table; } .float1{float:left;}.clear1{clear:both;}
-</style>
-<title>CSS overflow 실습 </title></head>
-<body><section>
-<h4>이미지 오버플로우 실습</h4>
+</style><title>CSS overflow 실습 </title></head>
+<body>
+<section><h4>이미지 오버플로우 실습</h4>
  <p>다음 예제는 이미지의 크기가 설정된 박스보다 큰 경우인 오버플로우에 대한 처리 방법을 설명하고 있다.</p>
  <div class="bdcolor">
  <img class="float1"src="../images/usb.png"width="100"height="140">
