--- a/20180530/forTest.html
+++ b/20180530/forTest.html
@@ -25,7 +25,7 @@ var=sum=0;
 var datax=[10,13,15,17,29,11,13,14,21,34];
 for(var i=0;i<datax.length;i++)
 sum=sum+datax[i];
-document.write("for합계=",sum."<br/>");
+document.write("for합계=",sum,"<br/>");
 var sum=0;
 for(var i in datax)
 sum=sum=datax[i];
