--- a/20180531/getElementByld.html
+++ b/20180531/getElementByld.html
@@ -16,7 +16,7 @@ function fnGetElementsByld(){
 <section id="login">
 <h4>자바 스크립트 실습</h4>
   <form id="form_id1"name1">
-<input id="input_id1"type="text"name="input_name1"/>
+<input id="input_id1"type="text"name="input_name1"size="30"/>
 <input id="button_id1"type="button"name="user_id"value="입력"/><br/>
 빈칸에 검색어를 넣고 입력해주세요
 </form>
