--- a/20180531/getElementByld.html
+++ b/20180531/getElementByld.html
@@ -15,9 +15,9 @@ function fnGetElementsByld(){
   <h2>HTML DOM실습을 환영합니다</h2></header>
 <section id="login">
 <h4>자바 스크립트 실습</h4>
-  <form id="form_id1"name1">
-<input id="input_id1"type="text"name="input_name1"size="30"/>
-<input id="button_id1"type="button"name="user_id"value="입력"/><br/>
+  <form id="form_id1"name="form_name1">
+  <input id="input_id1"type="text"name="input_name1" size="30"/>
+  <input id="button_id1"type="button"name="user_id"value="입력"/><br/>
 빈칸에 검색어를 넣고 입력해주세요
 </form>
 <form><input type="button"onclick="fnGetElementsByld();"value="변경실행"/></form>
