--- a/20180531/getElementByld.html
+++ b/20180531/getElementByld.html
@@ -22,4 +22,4 @@ function fnGetElementsByld(){
 </form>
 <form><input type="button"onclick="fnGetElementsByld();"value="변경실행"/></form>
  </section>
- <footer><p>&copy; 20XX Made by Korea. All rights reserved.</p></footer></body></html>
+ </body></html>
